[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-extract"
version = "1.0.0"
description = "Extract structured data from any document — PDF, DOCX, HTML, CSV, plain text — using LLMs with Pydantic schema validation, per-field confidence scores, and source grounding."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Linda Oraegbunam" }]
keywords = [
    "llm", "extraction", "structured-output", "pydantic",
    "pdf", "docx", "document-parsing", "nlp", "data-extraction",
    "anthropic", "openai", "confidence-scoring"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: General",
]
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.25.0",
    "pydantic>=2.0.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
    "python-dateutil>=2.8.0",
]

[project.optional-dependencies]
pdf = ["pdfplumber>=0.10.0"]
docx = ["python-docx>=1.1.0"]
html = ["beautifulsoup4>=4.12.0", "lxml>=5.0.0"]
all = ["pdfplumber>=0.10.0", "python-docx>=1.1.0", "beautifulsoup4>=4.12.0", "lxml>=5.0.0"]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "black>=24.0.0",
    "ruff>=0.4.0",
]

[project.scripts]
llm-extract = "llm_extract.cli:app"

[project.urls]
Homepage = "https://github.com/obielin/llm-extract"
Repository = "https://github.com/obielin/llm-extract"
Documentation = "https://github.com/obielin/llm-extract#readme"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]
